start workink on portfolio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h6 {
 #header .container {
   flex: 1;
 }
-.eye-container{
+.bubble-container{
   flex: 1;
 }
 
@@ -142,9 +142,10 @@ h6 {
 @media (max-width: 992px) {
   #header{
     margin-top: 50px;
-    padding: 0 20px;
+    padding: 0 0px;
     padding-top: 20px;
     align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: column;
   }
   #header h1 {
@@ -164,6 +165,7 @@ h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 0;
   }
 }
 
@@ -460,6 +462,10 @@ section .container {
 --------------------------------------------------------------*/
 .counts {
   padding: 70px 0 60px;
+  height: 250px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 .counts .count-box {
