--- a/assets/css/eye.css
+++ b/assets/css/eye.css
@@ -1,94 +1,157 @@
-.eye-container{
+.bubble-container{
     position: relative;
     /* width: 100%; width is seted on style.css  */
     height: 500px;
+	overflow: hidden;
 }
 @media (max-width:992px) {
-    .eye-container{
+    .bubble-container{
         width: 100%;
     }
 }
-.eye{
-	width: 200px;
-	height: 200px;
-	top: calc(50% - 100px);
-	left: calc(50% - 100px);
-	background-color: #ffefe2;
-	box-shadow: inset 0 0 60px 0 rgba(0,0,0,0.5);
+
+.ball {
+	display: inline-block;
+	width: 270px;
+	height: 270px;
 	border-radius: 100%;
+	position: relative;
+	background: radial-gradient(circle at bottom, #81e8f6, #76deef 10%, #055194 80%, #062745 100%);
+ }
+
+
+	.ball:before {
+	  content: "";
+	  position: absolute;
+	  top: 1%;
+	  left: 5%;
+	  width: 90%;
+	  height: 90%;
+	  border-radius: 100%;
+	  background: radial-gradient(circle at top, white, rgba(255, 255, 255, 0) 58%);
+	  -webkit-filter: blur(5px);
+	  filter: blur(5px);
+	  z-index: 2; }
+	.ball:after {
+	  content: "";
+	  position: absolute;
+	  display: none;
+	  top: 5%;
+	  left: 10%;
+	  width: 80%;
+	  height: 80%;
+	  border-radius: 100%;
+	  -webkit-filter: blur(1px);
+	  filter: blur(1px);
+	  z-index: 2;
+	  -webkit-transform: rotateZ(-30deg);
+	  transform: rotateZ(-30deg); }
+	.ball .shadow {
+	  position: absolute;
+	  width: 100%;
+	  height: 100%;
+	  background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
+	  -webkit-transform: rotateX(90deg) translateZ(-160px);
+	  transform: rotateX(90deg) translateZ(-160px);
+	  z-index: 1; }
+	.ball.plain {
+	  background: black; }
+	  .ball.plain:before, .ball.plain:after {
+		display: none; }
+	.ball.bubble {
+	  background: radial-gradient(circle at 50% 55%, rgba(240, 245, 255, 0.9), rgba(240, 245, 255, 0.9) 40%, rgba(225, 238, 255, 0.8) 60%, rgba(43, 130, 255, 0.4));
+	  -webkit-animation: bubble-anim 2s ease-out infinite;
+	  animation: bubble-anim 2s ease-out infinite; }
+	  .ball.bubble:before {
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		height: 80%;
+		width: 40%;
+		background: radial-gradient(circle at 130% 130%, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 46%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0.8) 58%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 100%);
+		-webkit-transform: translateX(131%) translateY(58%) rotateZ(168deg) rotateX(10deg);
+		transform: translateX(131%) translateY(58%) rotateZ(168deg) rotateX(10deg); }
+	  .ball.bubble:after {
+		display: block;
+		background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
+  
+  .stage {
+	width: 300px;
+	height: 300px;
 	position: absolute;
-	perspective: 500px;
-	overflow: hidden;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1.2);
+	margin: 20px;
+	-webkit-perspective: 1200px;
+	-moz-perspective: 1200px;
+	-ms-perspective: 1200px;
+	-o-perspective: 1200px;
+	perspective: 1200px;
+	-webkit-perspective-origin: 50% 50%;
+	-moz-perspective-origin: 50% 50%;
+	-ms-perspective-origin: 50% 50%;
+	-o-perspective-origin: 50% 50%;
+	perspective-origin: 50% 50%;
+  }
+
+
+  @media (max-width:320px){
+	.stage{
+		transform: translate(-50%, -50%) scale(.9);
+	}
 }
-.eye .iris{
-    width: 100%;
-    height: 100%;
-    top: 0%;
-    left: 0%;
-    position: absolute;
-    transform: rotateX(-50deg) rotateY(15deg) translateZ(68px) scale(0.6);
-    background: radial-gradient(ellipse at center, #000000 13%, #cedbe9 15%, #cedbe9 15%, #b1d1e0 25%, #85b5e5 44%, #6199c7 51%, #fffcf9 53%, rgba(255,252,249,0.4) 56%, transparent 71%);
-    border-radius: 100%;
+  @media (max-width:992px){
+	.stage{
+		transform: translate(-50%, -50%) scale(1);
+	}
 }
-
-.eye .iris.anim{
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-name: iris;
-}
-
-@keyframes iris{
-	0%, 100%{
-		transform: rotateX(-13deg) rotateY(20deg) translateZ(80px) scale(0.6)
-    }
-	10%{
-		transform: rotateX(-67deg) rotateY(20deg) translateZ(80px) scale(0.6)
-    }
-	30%{
-		transform: rotateX(-40deg) rotateY(-5deg) translateZ(80px) scale(0.6)
-    }
-	45%{
-		transform: rotateX(-20deg) rotateY(-20deg) translateZ(80px) scale(0.6)
-    }
-	55%, 60%{
-		transform: rotateX(0deg) rotateY(0deg) translateZ(80px) scale(0.6)
-    }
-	90%{
-		transform: rotateX(40deg) rotateY(5deg) translateZ(80px) scale(0.6)
-    }
-}
-
-
-/* @keyframes iris{
-	0%, 100%{
-		transform: rotateX(-10deg) rotateY(15deg) translateZ(68px) scale(0.6)
-    }
-	10%{
-		transform: rotateX(-50deg) rotateY(15deg) translateZ(68px) scale(0.6)
-    }
-	30%{
-		transform: rotateX(-30deg) rotateY(-5deg) translateZ(68px) scale(0.6)
-    }
-	45%{
-		transform: rotateX(-20deg) rotateY(-15deg) translateZ(68px) scale(0.6)
-    }
-	55%, 60%{
-		transform: rotateX(0deg) rotateY(0deg) translateZ(68px) scale(0.6)
-    }
-	90%{
-		transform: rotateX(30deg) rotateY(5deg) translateZ(68px) scale(0.6)
-    }
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+  @-webkit-keyframes bubble-anim {
+	0% {
+	  -webkit-transform: scale(1);
+	  transform: scale(1); }
+  
+	20% {
+	  -webkit-transform: scaleY(0.95) scaleX(1.05);
+	  transform: scaleY(0.95) scaleX(1.05); }
+  
+	48% {
+	  -webkit-transform: scaleY(1.1) scaleX(0.9);
+	  transform: scaleY(1.1) scaleX(0.9); }
+  
+	68% {
+	  -webkit-transform: scaleY(0.98) scaleX(1.02);
+	  transform: scaleY(0.98) scaleX(1.02); }
+  
+	80% {
+	  -webkit-transform: scaleY(1.02) scaleX(0.98);
+	  transform: scaleY(1.02) scaleX(0.98); }
+  
+	97%, 100% {
+	  -webkit-transform: scale(1);
+	  transform: scale(1); } }
+  
+  @keyframes bubble-anim {
+	0% {
+	  -webkit-transform: scale(1);
+	  transform: scale(1); }
+  
+	20% {
+	  -webkit-transform: scaleY(0.95) scaleX(1.05);
+	  transform: scaleY(0.95) scaleX(1.05); }
+  
+	48% {
+	  -webkit-transform: scaleY(1.1) scaleX(0.9);
+	  transform: scaleY(1.1) scaleX(0.9); }
+  
+	68% {
+	  -webkit-transform: scaleY(0.98) scaleX(1.02);
+	  transform: scaleY(0.98) scaleX(1.02); }
+  
+	80% {
+	  -webkit-transform: scaleY(1.02) scaleX(0.98);
+	  transform: scaleY(1.02) scaleX(0.98); }
+  
+	97%, 100% {
+	  -webkit-transform: scale(1);
+	  transform: scale(1); } }
